--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-# language-gpt-policy
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Privacy Policy</title>
+</head>
+<body>
+  <h1>Privacy Policy</h1>
+  <p><strong>Effective Date:</strong> March 23, 2025</p>
+  <p>This GPT helps users learn languages and may email lessons and updates. We do not share or sell your data. You can request deletion at any time.</p>
+  <p>Contact: your-email@example.com</p>
+</body>
+</html>
